force-app/main/default/objects/Product_Differential__c/Product_Differential__c.object-meta.xml
<CustomObject>
    <label>Product Differential</label>
    <nameField>
        <label>Product Differential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Differentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>