force-app/main/default/objects/Product_Differential__c/fields/Barges__c.field-meta.xml
<CustomField>
    <fullName>Barges__c</fullName>
    <label>Barges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>