force-app/main/default/objects/Product_Differential__c/fields/Cargoes__c.field-meta.xml
<CustomField>
    <fullName>Cargoes__c</fullName>
    <label>Cargoes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>