force-app/main/default/objects/Product_Differential__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <label>Column</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left1</fullName>
            </value>
            <value>
                <fullName>Left2</fullName>
            </value>
            <value>
                <fullName>Right1</fullName>
            </value>
            <value>
                <fullName>Right2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>