force-app/main/default/objects/Product_Differential__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>