force-app/main/default/objects/Product_Differential__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>