force-app/main/default/objects/Product_Differential__c/fields/prev_Day_Cargo__c.field-meta.xml
<CustomField>
    <fullName>prev_Day_Cargo__c</fullName>
    <label>Δ prev. Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>