force-app/main/default/objects/Product_Differential__c/recordTypes/Dashboard.recordType-meta.xml
<RecordType>
    <fullName>Dashboard</fullName>
    <active>true</active>
    <label>Dashboard</label>
</RecordType>