force-app/main/default/objects/Product_Differential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>Barges__c</columns>
    <columns>prev_Day_Barge__c</columns>
    <columns>Cargoes__c</columns>
    <columns>prev_Day_Cargo__c</columns>
    <columns>Display_Name__c</columns>
    <columns>Frequency__c</columns>
    <columns>Column__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>