force-app/main/default/objects/Product_Differential__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Cargoes__c</columns>
    <columns>Column__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Display_Name__c</columns>
    <columns>Frequency__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Price__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>prev_Day_Barge__c</columns>
    <columns>prev_Day_Cargo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>