force-app/main/default/objects/Product_Differential__c/listViews/Copy_of_All_SOM.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_SOM</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Barges__c</columns>
    <columns>prev_Day_Barge__c</columns>
    <columns>Cargoes__c</columns>
    <columns>prev_Day_Cargo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Display_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Frequency__c</columns>
    <columns>Column__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>HEL50ppm $/to,DK $/to</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Differential__c.Snapshot</value>
    </filters>
    <label>Copy of All(SOM)</label>
</ListView>