force-app/main/default/objects/Product_Differential__c/listViews/Dashboard.listView-meta.xml
<ListView>
    <fullName>Dashboard</fullName>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Price__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Column__c</columns>
    <columns>Frequency__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Differential__c.Dashboard</value>
    </filters>
    <label>Dashboard</label>
</ListView>