force-app/main/default/objects/Product_Differential__c/listViews/Snapshot_YESTERDAY.listView-meta.xml
<ListView>
    <fullName>Snapshot_YESTERDAY</fullName>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Barges__c</columns>
    <columns>prev_Day_Cargo__c</columns>
    <columns>Cargoes__c</columns>
    <columns>prev_Day_Barge__c</columns>
    <columns>Price__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Differential__c.Snapshot</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Snapshot YESTERDAY</label>
</ListView>